<resources>
    <string name="app_name">ClubAnimals</string>
    <string name="tv_bienvenida">Bienvenido</string>
    <string name="txt_nombre">Nombre</string>
    <string name="txt_correo">Correo</string>
    <string name="txt_contrasena">Contraseña</string>
    <string name="txt_confirmar_contrasena">Confirmar contraseña</string>
    <string name="btn_registrarse">Registrarse</string>
    <string name="btn_facebook">Ingresar con Facebook</string>
    <string name="btn_google">Ingresar con Google</string>
    <string name="tv_pregunta">Ya está registrado?</string>
    <string name="tv_ingresar">Ingresar</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="btn_perfil_guardar">Guardar</string>
    <string name="txt_perfil_nombre">Nombre</string>
    <string name="tv_perfil_correo">Correo</string>
    <string name="etxt_correo">ejemplo@ejemplo.com</string>
    <string name="tv_perfil_contrasena">Contraseña</string>
    <string name="etxt_contrasena">********</string>
    <string name="tv_perfil_telefono">Teléfono</string>
    <string name="etxt_telefono">312 000-0000</string>
    <string name="tv_perfil_localizacion">Localización</string>
    <string name="etxt_localizacion">Medellín</string>
    <string name="tv_perfil_mascota">Mis Mascotas</string>
    <string name="txt_nombre_mascota">Nombre</string>
    <string name="etxt_nombre_mascota">Nombre mascota</string>
    <string name="tv_tipo_mascota">Tipo</string>
    <string name="etxt_tipo_mascota">Perro</string>
    <string name="tv_edad_mascota">Edad</string>
    <string name="etxt_edad">0 años</string>
    <string name="txt_email">Correo</string>
    <string name="etxt_email">ejemplo@ejemplo.com</string>
    <string name="btn_recuperar">Recuperar contraseña</string>
    <string name="etxt_mensaje">Se envió un email a su correo con la información para restituir la contraseña.</string>
    <string name="veterinaria">Nombre Veterinaria</string>
    <string name="secondary_text">Dirección veterinaria</string>
    <string name="supporting_text">Servicio contratado</string>
    <string name="mascota_text">Tipo mascota y nombre</string>
    <string name="action_1">Finalizar transacción</string>
    <string name="action_2">Cerrar</string>
    <string name="tv_titulo_confirmacion">Enhorabuena!</string>
    <string name="tv_mensaje_confirmacion">Su solicitud ha sido procesada con éxito</string>
    //string de contratar
    <string name="text_nom_vet">Nombre de la veterinaria</string>
    <string name="text_nombre">Tu Nombre</string>
    <string name="text_tipo_mascota">Tipo de mascota</string>
    <string name="text_mensaje">Dejanos tu mensaje</string>
    <string name="text_enviar">Enviar</string>
    <string name="text_direccion">Calle siempre viva</string>
    <string name="num_telefono">5555555</string>
    <string name="text_correo">correo@correo.com</string>
    //string de login
    <string name="text_app">Club Animals</string>
    <string name="text_email">Email</string>
    <string name="num_password">Password</string>
    <string name="text_entrar">Entrar</string>

    <string name="no_registrado">¿Si aún no estás registrado? </string>
    <string name="text_resgistro">Registrarme </string>
    <string name="text_contraseña">Olvidé mi contraseña </string>
    //string localización de un servicio
    <string name="Descservubicacion">Encuentra tu veterinaria más cercana de acuerdo con tu ubicación</string>
    <string name="nomservicio">SERVICIO</string>
    <string name="sertovet">IR</string>

    //inico
    <string name="txt_guarderia">Guardería</string>
    <string name="txt_general">Consulta General</string>
    <string name="txt_odontologia">Odontología</string>
    <string name="txt_cirugia">Cirugía</string>
    <string name="txt_aseo">Baño y peluquería</string>
    <string name="txt_rayos">Rayos X</string>
    <string name="txt_vacunacion">Vacunación</string>
    <string name="txt_venta">Venta de Mascotas</string>
    <string name="txt_esterilizacion">Esterilización</string>
    <string name="txt_hospitalizacion">Hospitalización</string>
    <string name="txt_laboratorio">Laboratorio</string>
    <string name="txt_tienda">Tienda y Juguetería</string>
    <string name="txt_perfil">Nombre usuario</string>
    //activity ubicacion
    <string name="txt_usuario">Cuenta Usuario</string>
    <string name="txt_servicio">Servicios</string>
    <string name="title_activity_map">Map</string>

    //activity veterinaria
    <string name="Descrip">DESCRIPCION</string>
    <string name="descvet1">Veterinaria en el sur de la ciudad con modernas instalaciones y personal altamente califificado,
         estamos  especializados en caninos, felinos y aves, contamos con  más de  20 años de servivio a la comunidad. visitanos para
    tener el gusto de prestarle un ecxelente servicio a tu mascota</string>
    <string name="servet1">SERVICIOS</string>
    <string name="instalciones1">Parqueadero, Zona Wifi, aire acondicionado, Sala de espera, Domicilios, Todas las formas de pago</string>
    <string name="opnion1">Buen servicio, muy recomendado, buen trato con los animales</string>
    <string name="text_direccionvet">Calle siempre viva</string>
    <string name="precioconsgral">PRECIO:</string>
    <string name="nomvet">VETERINARIOS S.A</string>btncontra
    <string name="btncontra">CONTRATAR SERVICIOS</string>

    // Facebook
    <string name="facebook_application_id" translatable="false">YOUR_APP_ID</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbYOUR_APP_ID</string>
    <string name="listadovet">LISTADO DE VETERINARIAS QUE PRESTAN EL SERVICIO DE</string>

</resources>