<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="#6110C0E7"
    android:orientation="vertical"
    android:padding="10dp"

    tools:context=".views.MainActivity">

    <TextView
        android:id="@+id/nomApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center|center_horizontal"
        android:text="@string/text_app"
        android:textColor="@color/color_primario"
        android:textSize="34sp"
        android:textStyle="bold" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="center"
        android:layout_margin="30dp"
        android:src="@drawable/fredo_y_max"
        app:civ_border_color="@color/color_primario"
        app:civ_border_width="2dp" />

    <EditText
        android:id="@+id/Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:background="@drawable/border_radius"
        android:ems="10"
        android:drawablePadding="12dp"
        android:fontFamily="sans-serif-light"
        android:hint="@string/text_email"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textSize="24sp"
        android:drawableLeft="@drawable/ic_baseline_email_24" />


    <EditText
        android:id="@+id/Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_horizontal"
        android:layout_margin="10dp"
        android:background="@drawable/border_radius"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/num_password"
        android:inputType="textPassword"

        android:padding="10dp"
        android:textSize="24sp" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="276dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_horizontal"
        android:layout_margin="20dp"
        android:background="@drawable/buttom_round"
        android:onClick="goToInicio"
        android:padding="8dp"
        android:text="@string/text_entrar"
        android:textSize="24sp"
        android:textStyle="bold"
        app:backgroundTint="#17B556" />

    <TextView
        android:id="@+id/nomVet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|center_horizontal"
        android:onClick="goToRegistro"
        android:text="@string/text_resgistro"
        android:textColor="@color/color_primario"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/enlaceRecuContra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center|center_horizontal"
        android:onClick="goToContrasena"
        android:text="@string/text_contraseña"
        android:textColor="@color/color_primario"
        android:textSize="24sp" />


</LinearLayout>