<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo_app"
    tools:context=".views.RegistroActivity">

    <LinearLayout
        android:layout_width="336dp"
        android:layout_height="670dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_bienvenida"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:text="@string/tv_bienvenida"
            android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
            android:textColor="#086791"
            android:textSize="48sp" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imaView"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="center"
            android:layout_margin="30dp"
            android:src="@drawable/fredo_y_max"
            app:civ_border_color="@color/color_primario"
            app:civ_border_width="2dp" />


        <EditText
            android:id="@+id/txt_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_redondo"
            android:ems="10"
            android:hint="@string/txt_nombre"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:selectAllOnFocus="false"
            android:singleLine="false" />

        <EditText
            android:id="@+id/txt_correo"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/text_redondo"
            android:ems="10"
            android:hint="@string/txt_correo"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="false" />

        <EditText
            android:id="@+id/txt_contrasena"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/text_redondo"
            android:ems="10"
            android:hint="@string/txt_contrasena"
            android:inputType="textPersonName"
            android:padding="10dp" />

        <EditText
            android:id="@+id/txt_confirmar_contrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/text_redondo"
            android:ems="10"
            android:hint="@string/txt_confirmar_contrasena"
            android:inputType="textPersonName"
            android:padding="10dp" />

        <Button
            android:id="@+id/btn__registrarse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/boton_redondo"
            android:text="@string/btn_registrarse"
            android:textColor="@color/white"
            app:backgroundTint="#69CF13" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <Button
                android:id="@+id/btn_facebook"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/boton_redondo"

                android:drawableBottom="@drawable/face"
                android:textColor="@color/white"
                app:backgroundTint="@color/fui_transparent" />

            <Button
                android:id="@+id/btn_google"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/boton_redondo"
                android:drawableBottom="@drawable/google__1_"
                android:textColor="@color/white"
                app:backgroundTint="@color/fui_transparent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="202dp"
            android:layout_height="41dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4_pregunta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tv_pregunta"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_ingresar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="goToIngresar"
                android:text="@string/tv_ingresar"
                android:textColor="#051A8C" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>