<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6110C0E7"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".views.Localizacion_ActividadView">

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="393dp"
        android:layout_height="429dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Descservubicacion"
        app:layout_constraintVertical_bias="0.049" />

    <Button
        android:id="@+id/servtovet"
        android:layout_width="74dp"
        android:layout_height="53dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="32dp"
        android:onClick="goTomenu"
        android:text="@string/sertovet"
        android:textSize="20sp"
        app:backgroundTint="#17B556"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/Descservubicacion"
        android:layout_width="355dp"
        android:layout_height="53dp"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/Descservubicacion"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <TextView
        android:id="@+id/direccion"
        android:layout_width="380dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="4dp"
        android:drawableLeft="@drawable/map_marker_radius"
        android:drawablePadding="12dp"
        android:gravity="center|start"
        android:text="@string/text_direccion"
        android:textColor="#009688"
        android:textSize="24sp"
        android:textStyle="bold"
        app:drawableTint="#009688"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.322"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapView" />

    <TextView
        android:id="@+id/telefono"
        android:layout_width="163dp"
        android:layout_height="38dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="8dp"
        android:drawableLeft="@drawable/phone_in_talk"
        android:drawablePadding="10dp"
        android:gravity="center|start"
        android:text="@string/num_telefono"
        android:textColor="#009688"
        android:textSize="24sp"
        android:textStyle="bold"
        app:drawableTint="#009688"
        app:layout_constraintBottom_toTopOf="@+id/telefono2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/direccion"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/telefono2"
        android:layout_width="268dp"
        android:layout_height="31dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="16dp"
        android:drawableLeft="@drawable/at"
        android:drawablePadding="10dp"
        android:gravity="center|start"
        android:text="@string/text_correo"
        android:textColor="#009688"
        android:textSize="24sp"
        android:textStyle="bold"
        app:drawableTint="#009688"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="74dp"
        android:layout_height="52dp"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:drawableRight="@drawable/dog"
        android:gravity="center"
        app:backgroundTint="@color/white"
        app:drawableTint="#009688"
        app:iconGravity="start|end"
        app:layout_constraintBottom_toTopOf="@+id/Descservubicacion"
        app:layout_constraintEnd_toStartOf="@+id/spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.112" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="242dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>